# btrlog

./: .gitmodules  README.md
prototype/: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
prototype/cmp/bookkeeper/: .gitignore  README.md  ZipfTest.java  pom.xml
prototype/cmp/bookkeeper/local/: download_bookkeeper.sh
prototype/cmp/bookkeeper/local/conf/: bookie-0.conf  bookie-1.conf  bookie-template.conf  zk.cfg
prototype/cmp/bookkeeper/src/main/java/org/example/bookkeeper/benchmark/: BenchConfig.java  BenchmarkEnvironment.java  BenchmarkTask.java  BookKeeperBenchmark.java  ClientStats.java  LedgerClientState.java  LedgerTask.java  OpenBenchConfig.java  OpenBenchmark.java  WorkerThread.java  ZipfDistribution.java
prototype/cmp/bookkeeper/src/main/resources/: logback.xml
prototype/cmp/microbench/: fio-latency-at-rate.sh  fio-latency-vs-rate.sh  import-to-duckdb.sh  sockperf-latency-at-rate.sh  sockperf-latency-vs-rate-mt.sh  sockperf-latency-vs-rate.sh  sockperf-mt-server.sh
prototype/control/: Makefile  README.md  aws.tf  ebs.tf  network.tf  node.tf  perf-to-flamegraph.sh
prototype/control/scripts/: cluster_ssh.sh  fetch_cluster.sh  fetch_file.sh  local_cluster.sh  node_startup.sh  node_startup_bookkeeper.sh  redeploy_engine.sh
prototype/dep/reqtrace/: Cargo.toml
prototype/dep/reqtrace/src/: cell.rs  lib.rs  macro_support.rs  macros.rs  rdtsc.rs
prototype/src/: bench.rs  client.rs  config.rs  dst.rs  io.rs  lib.rs  node.rs  runtime.rs  server.rs  trace.rs  types.rs  util.rs
prototype/src/client/: client_runtime.rs  client_worker.rs  journal_state.rs  quorum.rs  stats.rs
prototype/src/io/: buffer.rs  send_buffer.rs  uring.rs  watermark.rs
prototype/src/node/: cluster.rs  health.rs
prototype/src/runtime/: arcwaker.rs  bounded_task_list.rs  future.rs  mesh.rs  ptrwaker.rs  rcwaker.rs  stackref.rs  sync_waker.rs  test_runtime.rs  threads.rs  waker_chain.rs
prototype/src/server/: blob.rs  journal.rs  message_server.rs  server_runtime.rs  wal.rs
prototype/src/server/blob/: config.rs  mock.rs  s3.rs  s32.rs
prototype/src/server/journal/: journal.rs  page.rs  stats.rs  store.rs
prototype/src/server/wal/: blockdevice.rs  buffer.rs  location.rs  mock.rs  stats.rs
prototype/src/types/: error.rs  id.rs  message.rs  packet.rs  wire.rs
spec/: BtrLogSpec.cfg  BtrLogSpec.tla  README.md
