[package]
name              = "v2"
version           = "0.1.0"
edition           = "2024"

################################################################################

[dependencies]
anyhow            = "1.0.98"
bincode           = "2.0.1"
clap              = { version = "4.5", features = ["derive", "env"] }
core_affinity     = "0.8.3"
derive_more       = { version = "2.0.1", default-features = false, features = ["display"] }
futures-util      = "0.3.31"
io-uring          = "0.7.11"
libc              = { version = "0.2.172", features = ["std"] }
local-sync        = { version = "0.1.1",   default-features = false }
log               = "0.4.27"
macro_rules_attr  = "0.1.3"
num_cpus          = "1.16.0"
pin-project-lite  = { version = "0.2.16", default-features = false }
rand              = { version = "0.9.1", default-features = false }
smallvec          = { version = "1.15.1", features = ["union", "const_new", "const_generics"] }
socket2           = "0.6.1"
static_assertions = "1.1.0"
thiserror         = "2.0.17"
tokio             = { version = "1.48.0",  default-features = false, features = ["sync", "macros"] }
uuid              = { version = "1.16.0", features = ["std", "v4"] }
# server 
aws-config        = { version = "1.6.3", optional = true, default-features = false, features = ["default-https-client", "behavior-version-latest"]}
aws-sdk-s3        = { version = "1.85.0", optional = true, default-features = false, features = ["rustls"] }
bytes             = { version = "1.10.1", optional = true }
# benchmark output
rand_distr        = { version = "0.5.1", optional = true }
serde             = { version = "1.0", optional = true, features = ["derive"] }
serde_json        = { version = "1.0", optional = true }
# benchmarking & perf debugging
reqtrace          = { path = "./dep/reqtrace", default-features = false, features = ["bincode"] }
perf-event-block  = { path = "./dep/perfevent" }
more-asserts = "0.3.1"
papaya = "0.2.3"
env_logger        = { version = "0.11.8", optional = true } 

################################################################################

[features]
default           = ["full"]
full              = ["server", "client", "bench"]
bench             = ["client", "server", "dep:serde", "dep:serde_json", "dep:rand_distr"]
server            = ["s3-api", "dep:aws-config", "dep:aws-sdk-s3", "dep:bytes"]
client            = []
# we scrapped our custom http client b/c it was causing issues in edge cases; use tokio
# plus the standard s3 client on a separate thread instead, since we ended up isolating
# the blob store access in its separate thread anyway; it caused request latency spikes
s3-api            = ["tokio/rt", "tokio/time", "aws-sdk-s3/rt-tokio"]
trace-latencies   = []
trace-requests    = ["reqtrace/enable-tracing"]
trace-percentiles = ["trace-latencies"]
deterministic     = []
test-real-s3      = []
env-logger        = ["dep:env_logger"]
perf-debugging    = ["trace-latencies", "trace-percentiles", "trace-requests", "env-logger"]

################################################################################

[profile.bench]
debug = true

[profile.release]
debug = true

################################################################################

[[bin]]
name = "v2_bench"
required-features = ["bench"]

[[bin]]
name = "roofline_uring"
required-features = []
